@@ -2,6 +2,7 @@ Change log for Bos Wars
 -----------------------
 
 Development version:
+- Discard NewOrder if it refers to destroyed unit (Kalle Olavi Niemitalo)
 - Recover map specific triggers and settings when loading a saved game (Francois Beerten)
 - Add the bottleneck map (Kyran Jackson)
 - Make GLMaxTextureSize configurable for systems where the value reported
